--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
-                <h1>Hi, I'm <span>Younus</span><br>Siddique From Earth</h1>
+                <h1>Hi, I'm <span>Younus</span><br>Siddique From India</h1>
             </div>
         </div>
     </div>
